--- a/layouts/partials/footer.njk
+++ b/layouts/partials/footer.njk
@@ -4,7 +4,7 @@
     <p>Metalsmith version: {{ msVersion }}</p>
     <p>Node version: {{ nodeVersion }}</p>
     <p class="copyright">
-      © 2022 - Build with Metalsmith
+      © {{ "" | thisYear }} - Build with Metalsmith
     </p>
   </div>
 </footer>
