--- a/lib/layouts/partials/footer.njk
+++ b/lib/layouts/partials/footer.njk
@@ -3,8 +3,6 @@
     <p>Last site build: {{ stats.atime | UTCdate }}</p>
     <p>Metalsmith version: {{ msVersion }}</p>
     <p>Node version: {{ nodeVersion }}</p>
-    <p class="copyright">
-      © {{ "" | thisYear }} - Build with Metalsmith
-    </p>
+    <p class="copyright">© {{ "" | thisYear }} - Build with Metalsmith</p>
   </div>
 </footer>
